src/objects/Ven_ReportSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>Ven_NumberOfAccounts__c</fullName>
        <label># of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_NumberOfActivitiesAndEvents__c</fullName>
        <label># of activities and events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_OpportunityOwnerUnit__c</fullName>
        <label>Opportunity Owner Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_ReportEnds__c</fullName>
        <label>Report ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_ReportStarts__c</fullName>
        <formula>Ven_ReportEnds__c - 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report starts</label>
        <type>Date</type>
    </fields>
    <label>Ventures Report Snapshot</label>
    <nameField>
        <label>Snapshot Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ventures Report Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>